--- a/runnerApp/Gemfile
+++ b/runnerApp/Gemfile
@@ -25,7 +25,8 @@ gem 'mysql2'
 # gem 'aws-s3', :require => 'aws/s3'
 
 #gem 'newrelic_rpm',:path => '/home/qauser/newrelic/ruby_agent'
-gem 'newrelic_rpm', '2.13.5.beta4'
+gem 'newrelic_rpm'
+gem 'ey_config'
 #gem 'newrelic_rpm','2.13.4'
 
 # Bundle gems for the local environment. Make sure to
